# sistema-de-saude

./: README.md
app/auth/: router.py
app/healthposts/: router.py  schemas.py
backend/: .gitignore  Makefile  docker-compose.yml  pyproject.toml
backend/app/: database.py  main.py
backend/app/auth/: router.py  schemas.py
backend/app/healthposts/: router.py  schemas.py
backend/app/notifications/: router.py  schemas.py
backend/app/patients/: router.py  schemas.py
backend/scripts/: historico-de-vacinas.py  paciente.py  posto-de-saude.py  usuario.py
backend/sql/: create_tables.sql
front-end/css/: cadastro.css  index.css  inicio.css  notificacao.css  styles.css
front-end/css/pages/: busca.css  cadastro.css
front-end/js/: busca.js  cadastro.js  inicio.js  main.js  notificacoes.js
front-end/js/components/: index.js  main.js
front-end/js/pages/: busca.js  inicio.js  notificacoes.js
front-end/view/: busca.html  cadastro.html  cadastro_paciente.html  cadastro_posto.html  index.html  notificacoes.html  perfil.html  politica-privacidade.html  tela_inicio_paciente.html  tela_inicio_posto.html  termos.html
front-end/view/dashboard/: tela_inicio_paciente.html  tela_inicio_posto.html
front-end/view/pages/: busca.html  index.html  notificacoes.html  perfil.html  politica_privacidade.html
front-end/view/register/: cadastro.html  cadastro_paciente.html
frontend/css/base/: styles.css
frontend/css/pages/: busca.css  cadastro.css  inicio.css  notificacao.css  termos-politica.css
frontend/js/components/: cadastro_schemas.js  index.js  main.js  paginacao.js
(+17 files in other folders)
