[tool.poetry]
name = "sugps"
version = "0.1.0"
description = ""
authors = ["Johnson <108435026+Sjhns@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
black = "^24.10.0"
psycopg2 = "^2.9.10"
bcrypt = "^4.2.1"
httpx = "^0.28.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


